# Pygame-template

./: .pre-commit-config.yaml  README.md  config.yaml  main.py  pyinstaller.spec  pyproject.toml  todo.txt
.github/workflows/: package-program.yml
game/: game.py
pygame_me/: config.py
pygame_me/logging/: __init__.py  lib.py
spatial/: __init__.py  game.py  world.py
src/my_game/: initialise_pygame.py  main.py
src/my_game/states/: game.py  main_menu.py
src/my_game/utils/: asset_manager.py  state_manager.py
tests/: test_config.py  test_game.py  test_main.py
tools/: create_exe.py
